fix: ajuster l'alignement et l'espacement dans le composant Main et Intro

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -28,7 +28,8 @@
   /* max-width: 800px; */
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 60px;
   /* background-color: var(--foreground); */
   padding: 120px 60px;
 }
@@ -38,7 +39,8 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 24px;
+  gap: 5px;
+  pointer-events: none;
 }
 
 .intro h1 {
